web_site/journal_layout.css
.heading {
  background-color: #a8f0f0;
  text-align: right;
}

body {
  background-image: url("https://wallpaper-house.com/data/out/10/wallpaper2you_376099.jpg");
}
.green {
  margin: 0% 10% auto;
  border: 10px solid white;
  background-color: white;
}
.sub-heading {
  font-size: 14pt;
  margin: 5px;
}
.note1 {
  border: 4px solid #c2e9e9;
  background-color: #e8fbfb;
  padding: 5px;
  padding-bottom: 70px;
  margin-top: 10px;
}
.note2 {
  border: 4px solid #c2e9e9;
  background-color: #e8fbfb;
  padding: 5px;
  padding-bottom: 20px;
  margin-top: 10px;
}
.date {
  margin-left: 1px;
  border-bottom: 2px dashed #245f5f;
}
img {
  float: right;
}
/* .h-txt{
    float: right;
} */

